--- a/index.html
+++ b/index.html
@@ -8,5 +8,43 @@
 </head>
 <body>
     <p>Hello FWRD!</p>
+    <header class="header">
+        <!-- navigation items and logo-->
+        <div class="menu"> 
+            <div class="menu__logo">
+                <img src="./img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+            </div>
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="" class="navigation__link">Home</a></li>
+                    <li class="navigation__item"><a href="" class="navigation__link">Portfolio</a></li>
+                    <li class="navigation__item"><a href="" class="navigation__link">Services</a></li>
+                    <li class="navigation__item"><a href="" class="navigation__link">Testimonials</a></li>
+                    <li class="navigation__item"><a href="" class="navigation__link">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+        <!-- gallery and h1 -->
+        <div class="header__main">
+            <div class="header__text-box">
+                <h1 class="heading-primary">Bringing products to life</h1>
+            </div>
+            <div class="header__content-box">
+                <div class="gallery">
+                    <figure class="gallery__item gallery__item--1">
+                        <figcaption class="gallery__image-title">Kreekcraft</figcaption>
+                    </figure>
+                    <figure class="gallery__item gallery__item--2">
+                        <figcaption class="gallery__image-title">Pixel playground</figcaption>
+                    </figure>
+                    <figure class="gallery__item gallery__item--3">
+                        <figcaption class="gallery__image-title">Ian Bick</figcaption>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
