--- a/index.html
+++ b/index.html
@@ -173,24 +173,24 @@
                         <span class="u-text-block">your requirement</span>
                     </h2>
                 </div>
-                <form action="#" method="POST" class="form">
+                <form action="#" method="POST" class="form" autocomplete="off">
                     <div class="form__row">
                         <div class="form__group">
-                            <input id="name" name="name" type="text" placeholder="Name" class="form__input">
+                            <input id="name" name="name" type="text" placeholder="Name" class="form__input" autocomplete="off">
                             <label for="name" class="form__label">Name</label>
                         </div>
                         <div class="form__group">
-                            <input type="email" id="email" name="email" placeholder="Email" class="form__input">
+                            <input type="email" id="email" name="email" placeholder="Email" class="form__input" autocomplete="off">
                             <label for="email" class="form__label">Email</label>
                         </div>
                     </div>
                     <div class="form__row">
                         <div class="form__group">
-                            <input type="text" id="phone" name="phone" placeholder="Phone number" class="form__input">
+                            <input type="text" id="phone" name="phone" placeholder="Phone number" class="form__input" autocomplete="off">
                             <label for="phone" class="form__label">Phone number</label>
                         </div>
                         <div class="form__group">
-                            <input type="text" id="service" name="service" class="form__input" placeholder="Which service are you interested in?">
+                            <input type="text" id="service" name="service" class="form__input" placeholder="Which service are you interested in?" autocomplete="off">
                             <label for="service" class="form__label">Which service are you interested in?</label>
                         </div>
                     </div>
