--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
     <main>
         <section class="section-projects">
             <div class="background-layer">
-                <!-- <img src="./img/svg/bg-purple-wave.svg" alt="Orange wave decorative image" class="section-projects__wave"/> -->
+                <div class="section-projects__overflow-container section-projects__overflow-container--wave">
+                    <img src="./img/svg/bg-purple-wave.svg" alt="Orange wave decorative image" class="section-projects__wave"/>
+                </div>
             </div>
             <div class="content-layer">
                 <div class="wrapper">
@@ -183,6 +185,7 @@
         <section class="section-blog">
             <div class="background-layer">
                 <img src="./img/svg/bg-green-corner-wave.svg" alt="Green wave decorative image" class="section-blog__wave"/>
+                <img src="./img/svg/blog-purple-wave.svg" class="section-blog__bottom-wave">
             </div>
             <div class="content-layer">
                 <div class="wrapper">
@@ -267,8 +270,10 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="backgroung-layer">
-
+        <div class="background-layer">
+            <div class="background-layer__clip"></div>
+            <img src="./img/svg/footer-wave-top.svg" alt="" class="footer__wave footer__wave--top">
+            <img src="./img/svg/footer-wave-bottom.svg" alt="" class="footer__wave footer__wave--bottom">
         </div>
         <div class="footer-content">
             <div class="footer__logo-box">
