--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -22,5 +22,11 @@
                 </ul>
             </nav>
         </div>
+        <div class="page-notch">
+            <div class="page-notch__content">
+                <h1 class="page-notch__heading">Portfolio</h1>
+                <span class="page-notch__sub-text">See our latest projects</span>
+            </div>
+        </div>
     </header>
 </body>
