Portfolio-zigzag-items

--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
+
 <body class="portfolio">
     <header class="header">
-        <div class="menu"> 
+        <div class="menu">
             <div class="menu__logo">
                 <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
             </div>
@@ -29,4 +31,73 @@
             </div>
         </div>
     </header>
+    <section class="section-projects">
+        <div class="zigzag-container">
+            <div class="zigzag-container__item">
+                <div class="zigzag-container__item-description">
+                    <h4 class="zigzag-container__title ">Website Design</h4>
+                    <h3 class="zigzag-container__client ">RE:ACTIVE</h3>
+                    <p class="zigzag-container__description">Ground up brand design and development for fledging video
+                        production studio in the benelux region.</p>
+                    <a class="button button--orange zigzag-container__button">View project</a>
+                </div>
+                <div class="zigzag-container__item-presentation">
+                    <img src="../img/zigzag.png" class="zigzag-container__image">
+                </div>
+            </div>
+
+            <div class="zigzag-container__item">
+                <div class="zigzag-container__item-description">
+                    <h4 class="zigzag-container__title">Website Design</h4>
+                    <h3 class="zigzag-container__client">IAN BACK</h3>
+                    <p class="zigzag-container__description">Centralising a successful podcaster's portofolio into a
+                        modern, functional platform, while also delivering a tailored brand design uplift.</p>
+                    <a class="button button--orange zigzag-container__button">View project</a>
+                </div>
+                <div class="zigzag-container__item-presentation">
+                    <img src="../img/zigzag.png" class="zigzag-container__image">
+                </div>
+            </div>
+
+            <div class="zigzag-container__item">
+                <div class="zigzag-container__item-description">
+                    <h4 class="zigzag-container__title">Ecommerce Platform Design</h4>
+                    <h3 class="zigzag-container__client">KREEKCRAFT</h3>
+                    <p class="zigzag-container__description">A hollistic ecommerce migration and brand uplift project
+                        for a premire video games content creator</p>
+                    <a class="button button--orange zigzag-container__button">View project</a>
+                </div>
+                <div class="zigzag-container__item-presentation">
+                    <img src="../img/zigzag.png" class="zigzag-container__image">
+                </div>
+            </div>
+
+            <div class="zigzag-container__item">
+                <div class="zigzag-container__item-description">
+                    <h4 class="zigzag-container__title">Website Design</h4>
+                    <h3 class="zigzag-container__client">PIXEL PLAYGROUND</h3>
+                    <p class="zigzag-container__description">Construction of a three pronged hub for a new, youth
+                        focused games studio, featuring the launch title, GAMESHOW, an integrated events portal, and a
+                        fully developed ecommeerce platform.</p>
+                    <a class="button button--orange zigzag-container__button">View project</a>
+                </div>
+                <div class="zigzag-container__item-presentation">
+                    <img src="../img/zigzag.png" class="zigzag-container__image">
+                </div>
+            </div>
+
+            <div class="zigzag-container__item">
+                <div class="zigzag-container__item-description">
+                    <h4 class="zigzag-container__title">Website Design</h4>
+                    <h3 class="zigzag-container__client">NAME YOUR PRICE</h3>
+                    <p class="zigzag-container__description">A fully developed events, merchandise and content platform
+                        for an established YouTube content creator and television personality.</p>
+                    <a class="button button--orange zigzag-container__button">View project</a>
+                </div>
+                <div class="zigzag-container__item-presentation">
+                    <img src="../img/zigzag.png" class="zigzag-container__image">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
