--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -31,7 +31,11 @@
             </div>
         </div>
     </header>
-    <section class="section-projects">
+    <main>
+    <section class="section-portfolios">
+        <img src="../img/svg/portfolio-bg-right-wave.svg" class="section-portfolios__wave section-portfolios__wave--right section-portfolios__wave--upper">
+        <img src="../img/svg/portfolio-bg-right-wave.svg" class="section-portfolios__wave section-portfolios__wave--right section-portfolios__wave--lower">
+        <img src="../img/svg/portfolio-bg-left-wave.svg" class="section-portfolios__wave section-portfolios__wave--left">
         <div class="zigzag-container">
             <div class="zigzag-container__item">
                 <div class="zigzag-container__item-description">
@@ -99,5 +103,141 @@
                 </div>
             </div>
         </div>
+        <div class="u-center-text u-padding-top-btm-lg">
+            <button class="button button--green section-portfolios__button">
+                <span class="button__text">
+                    View more projects
+                </span>
+            </button>
+        </div>
     </section>
+    <section class="section-clients">
+        <div class="notch-title notch-title--green notch-title--top-left">
+            <span class="notch-title__text">
+                Our clients
+            </span>
+        </div>
+        <div class="logos">
+            <div id="clients-slide" class="logos__slide">
+                <img class="logos__image" src="../img/icons/fwrd-logo.png">
+                <img class="logos__image" src="../img/icons/pxl.png">
+                <img class="logos__image" src="../img/icons/msf.png">
+                <img class="logos__image" src="../img/icons/wonitrol.png">
+                <img class="logos__image" src="../img/icons/kreek.png">
+                <img class="logos__image" src="../img/icons/nyp.png">
+            </div>
+        </div>
+    </section>
+    <section class="section-form">
+        <img src="../img/svg/bg-wave-orange-top-down.svg" alt="" class="section-form__background-top-wave">
+        <div class="u-center-text u-section-title  u-padding-bottom-med">
+            <h2 class="h-1">
+                <span class="u-text-block">Tell us about</span>
+                <span class="u-text-block">your requirement</span>
+            </h2>
+        </div>
+        <form action="#" method="POST" class="form wrapper" autocomplete="off">
+            <div class="form__row">
+                <div class="form__group">
+                    <input id="name" name="name" type="text" placeholder="Name" class="form__input" autocomplete="off" required>
+                    <label for="name" class="form__label">Name</label>
+                </div>
+                <div class="form__group">
+                    <input type="email" id="email" name="email" placeholder="Email" class="form__input" autocomplete="off" required>
+                    <label for="email" class="form__label">Email</label>
+                </div>
+            </div>
+            <div class="form__row">
+                <div class="form__group">
+                    <input type="text" id="phone" name="phone" placeholder="Phone number" class="form__input" autocomplete="off" required>
+                    <label for="phone" class="form__label">Phone number</label>
+                </div>
+                <div class="form__group">
+                    <input type="text" id="service" name="service" class="form__input" placeholder="Which service are you interested in?" autocomplete="off" required>
+                    <label for="service" class="form__label">Which service are you interested in?</label>
+                </div>
+            </div>
+            <div class="form__row">
+                <div class="form__group form__group--full-width">
+                    <input type="text" class="form__input" id="info" name="info" placeholder="Tell us more">
+                    <label for="info" class="form__label">Tell us more</label>
+                </div>
+            </div>
+            <div class="form__row">
+                <div class="form__group u-center-text">
+                    <button class="button button--orange form__button" type="submit" disabled>
+                        Submit
+                    </button>
+                </div>
+            </div>
+        </form>
+</section>
+</main>
+<footer class="footer">
+<div class="background-layer">
+    <div class="background-layer__clip"></div>
+    <img src="../img/svg/footer-wave-top.svg" alt="" class="footer__wave footer__wave--top">
+    <img src="../img/svg/footer-wave-bottom.svg" alt="" class="footer__wave footer__wave--bottom">
+</div>
+<div class="footer-content">
+    <div class="footer__logo-box">
+        <img src="../img/icons/fwrd-logo-white.png" alt="" class="footer__logo">
+    </div>
+    <ul class="footer__list">
+        <div class="footer__list-section">
+            <li class="footer__list-item"><a href="#" class="footer__link">About</a></li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Portfolio</a></li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Blog</a></li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Testimonials</a></li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Contact us</a></li>
+        </div>
+        <div class="footer__list-section">
+            <li class="footer__list-item">
+                <a href="" class="footer__link">Follow us</a>
+                <ul class="footer__list footer__list--standalone">
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="../img/svg/instagram.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="../img/svg/behance.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="../img/svg/dribble.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="../img/svg/linkedin.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="../img/svg/facebook.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="footer__list-item">
+                <span class="footer__text">
+                    Let's create some magic
+                </span>
+            </li>
+            <li class="footer__list-item u-left-padding-zero">
+                <a href="" class="button button--green footer__button footer__link">Inquire</a>
+            </li>
+        </div>
+    </ul>
+</div>
+</footer>
 </body>
+<script>
+    let clientsSlide = document.getElementById('clients-slide');
+    let copy = clientsSlide.cloneNode(true);
+    clientsSlide.parentNode.appendChild(copy);
+
+</script>
