--- a/testimonials/re-active.html
+++ b/testimonials/re-active.html
@@ -31,7 +31,51 @@
     </header>
     <main>
     <section class="section-testimonials">
-
+        <img src="../img/svg/bg-top-purple-wave-testimonial.svg" alt="" class="section-testimonials__img section-testimonials__img--top-left">
+        <img src="../img/svg/bg-bottom-purple-wave-testimonial.svg" alt="" class="section-testimonials__img section-testimonials__img--bottom-right">
+        <div class="u-flex-column u-flex-column--center u-mw-80 u-center-div u-content-layer">
+            <div class="u-flex-row">
+                <div class="quote quote--med quote--round quote--orange">
+                    <div class="quote__row">
+                        <span class="quote__title">Testimonial</span>
+                    </div>
+                    <div class="quote__row">
+                        <span class="quote__text quote__text--center">&lsquo;FWRD is a team run by veterans in the space and their work reflects that! Their communication was top tier and they went the extra mile on the branding for my company.</span>
+                    </div>
+                    <div class="quote__row">
+                        <span class="quote__quotee">Siebert Lanhove, Founder, Re:Activ</span>
+                    </div>
+                    <div class="quote__row">
+                        <span class="quote__text quote__text--start">services provided • services provided • services provided</span>
+                    </div>
+                    <div class="quote__open-quote"></div>
+                    <div class="quote__close-quote"></div>
+                </div>
+                <div class="u-padding-top-btm-med">
+                    <ul class="button-slider">
+                        <li class="button-slider__item"><button class="button-slider__button button-slider__button--selected"></button></li>
+                        <li class="button-slider__item"><button class="button-slider__button "></button></li>
+                        <li class="button-slider__item"><button class="button-slider__button"></button></li>
+                        <li class="button-slider__item"><button class="button-slider__button"></button></li>
+                        <li class="button-slider__item"><button class="button-slider__button"></button></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="u-flex-row u-margin-top-mid">
+                <div class="u-mw-80">
+                    <div class="u-center-text">
+                        <img src="../img/zigzag.png" class="u-image-cover-top-mh50">
+                    </div>
+                    <div class="u-margin-top u-center-text text-testimonial">
+                        <h4 class="text-title">Website Design</h4>
+                        <h3 class="text-client">RE:ACTIVE</h3>
+                        <p class="text-description">Ground up brand design and development for fledging video
+                            production studio in the benelux region.</p>
+                        <a class="button button--orange button--testimonial">View project</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="section-clients">
         <div class="notch-title notch-title--green notch-title--top-left">
@@ -51,7 +95,7 @@
         </div>
     </section>
     <section class="section-form">
-        <div class="u-center-text u-section-title  u-padding-bottom-med">
+        <div class="u-center-text u-section-title u-padding-bottom-med">
             <h2 class="h-1">
                 <span class="u-text-block">Tell us about</span>
                 <span class="u-text-block">your requirement</span>
