--- a/links/services.html
+++ b/links/services.html
@@ -8,11 +8,62 @@
     <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body class="services">
+    <div class="overlaying-navigation">
+        <input type="checkbox" class="overlaying-navigation__checkbox" id='navi-toggle'>
+        <label for="navi-toggle" class="overlaying-navigation__button">
+            <span class="overlaying-navigation__icon overlaying-navigation__icon--white">&nbsp;</span>
+        </label>
+        <div class="overlaying-navigation__background">&nbsp;</div>
+        <div class="overlaying-navigation__nav">
+            <div class="overlaying-navigation__nav-item u-margin-top-mid">
+                <ul class="overlaying-navigation__list">
+                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Home</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Portfolio</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Services</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Testimonials</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Contact</a></li>
+                </ul>
+            </div>
+            <div class="overlaying-navigation__nav-item overlaying-navigation__nav-item--column">
+                <span class="overlaying-navigation__link overlaying-navigation__link--mid u-padding-top-btm-async u-border-top-green">Let's create some magic</span>
+                <a href="" class="button button--green footer__button footer__link">Inquire</a>
+            </div>
+            <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
+                <ul class="footer__list footer__list--standalone">
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="./img/svg/instagram.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="./img/svg/behance.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="./img/svg/dribble.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="./img/svg/linkedin.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__link">
+                            <img src="./img/svg/facebook.svg" alt="" class="footer__social-media">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <header class="header">
         <img src="../img/svg/services-header.svg" alt="" class="services__header-wave">
         <div class="menu">
             <div class="menu__logo">
-                <img src="../img/icons/fwrd-logo-white.png" alt="Logo image" class="menu__logo-img">
+                <img src="../img/icons/fwrd-logo-white.png" alt="Logo image" class="menu__logo-img menu__logo-img--white">
             </div>
             <nav class="navigation">
                 <ul class="navigation__list">
