--- a/links/contact.html
+++ b/links/contact.html
@@ -33,27 +33,27 @@
                 <ul class="footer__list footer__list--standalone">
                     <li class="footer__list-item">
                         <a href="#" class="footer__link">
-                            <img src="./img/svg/instagram.svg" alt="" class="footer__social-media">
+                            <img src="../img/svg/instagram.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#" class="footer__link">
-                            <img src="./img/svg/behance.svg" alt="" class="footer__social-media">
+                            <img src="../img/svg/behance.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#" class="footer__link">
-                            <img src="./img/svg/dribble.svg" alt="" class="footer__social-media">
+                            <img src="../img/svg/dribble.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#" class="footer__link">
-                            <img src="./img/svg/linkedin.svg" alt="" class="footer__social-media">
+                            <img src="../img/svg/linkedin.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#" class="footer__link">
-                            <img src="./img/svg/facebook.svg" alt="" class="footer__social-media">
+                            <img src="../img/svg/facebook.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                 </ul>
