--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 </span>
             </div>
             <div class="logos">
-                <div id="clients-slide" class="logos__slide">
+                <div id="clients-slide" class="logos__slide logos__slide--animated">
                     <img class="logos__image" src="./img/icons/fwrd-logo.png">
                     <img class="logos__image" src="./img/icons/pxl.png">
                     <img class="logos__image" src="./img/icons/msf.png">
